feat(ui): improve alert styling

--- a/src/gui/scss/Light.scss
+++ b/src/gui/scss/Light.scss
@@ -91,14 +91,21 @@ $dropdown-menu-divider-color: #e5e5e5;
 
 $muted-text-color: inherit;
 
-$alert-info-text-color: #31708f;
-$alert-info-bg: #d9edf7;
+$alert-info-text-color: #1a5871;
+$alert-info-bg: #e6f4f9;
+$alert-info-border: #5a97b8;
 
-$alert-warning-text-color: #8a6d3b;
-$alert-warning-bg: #fcf8e3;
+$alert-warning-text-color: #7d6a2e;
+$alert-warning-bg: #fffbeb;
+$alert-warning-border: #d4b85e;
 
-$alert-danger-text-color: #a94442;
-$alert-danger-bg: #f2dede;
+$alert-danger-text-color: #8b3a3a;
+$alert-danger-bg: #fef2f2;
+$alert-danger-border: #ce6c6c;
+
+$alert-success-text-color: #2d6b2d;
+$alert-success-bg: #f0fdf0;
+$alert-success-border: #7acc7a;
 
 $fb-tab-wrapper-bg: #ffffff;
 $fb-tab-wrapper-border-color: #eaecec;
