--- a/src/gui/scss/PurpleSky.scss
+++ b/src/gui/scss/PurpleSky.scss
@@ -105,21 +105,21 @@ $dropdown-menu-divider-color: #5c4a76;
 
 $muted-text-color: #e6e1f1;
 
-$alert-info-text-color: $accent-100;
-$alert-info-bg: rgba($accent, 0.12);
-$alert-info-border: $accent-300;
+$alert-info-text-color: oklch(80.9% 0.105 251.813);
+$alert-info-bg: oklch(0.62 0.21 259.82 / 0.1);
+$alert-info-border: oklch(0.62 0.21 259.82 / 0.2);
 
-$alert-warning-text-color: #f4d47a;
-$alert-warning-bg: rgba(255, 238, 115, 0.08);
-$alert-warning-border: #d4b85e;
+$alert-warning-text-color: oklch(97.3% 0.071 103.193 / 0.8);
+$alert-warning-bg: oklch(79.5% 0.184 86.047 / 0.1);
+$alert-warning-border: oklch(79.5% 0.184 86.047 / 0.15);
 
-$alert-danger-text-color: #f3a3c3;
-$alert-danger-bg: rgba(166, 74, 116, 0.2);
-$alert-danger-border: #d17aa5;
+$alert-danger-text-color: oklch(88.5% 0.062 18.334 / 0.8);
+$alert-danger-bg: oklch(63.7% 0.237 25.331 / 0.15);
+$alert-danger-border: oklch(63.7% 0.237 25.331 / 0.25);
 
-$alert-success-text-color: #a3f3a3;
-$alert-success-bg: rgba(144, 238, 144, 0.1);
-$alert-success-border: #7acc7a;
+$alert-success-text-color: oklch(92.5% 0.084 155.995 / 0.85);;
+$alert-success-bg: oklch(72.3% 0.219 149.579 / 0.1);
+$alert-success-border: oklch(72.3% 0.219 149.579 / 0.2);
 
 // Tabs & tables
 $fb-tab-wrapper-bg: #342b43;
