feat(ui): update border radius across app, give primary button a subtle gradient

--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -294,7 +294,7 @@
 
   <div class="dashboard-settings-button-container">
     <firebot-button
-      type="primary"
+      type="default"
       icon="fas fa-cog"
       ng-click="showChatSettingsModal()"
       tooltip="Dashboard Settings"
