fix(ui): gigantified emote with message

--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -248,11 +248,9 @@
     }
 }
 
-.gigantify {
+.gigantify :last-child>.chatEmoticon {
     display: block !important;
-    & .chatEmoticon {
-        height: 8rem !important;
-    }
+    height: 8rem !important;
 }
 
 .chat-username {
